2008-02-15  Jaroslav Hajek <highegg@gmail.com>

	* initiated ChangeLog
	* lookup.cc: added